--- a/digilogsim/digilogsim.vcxproj
+++ b/digilogsim/digilogsim.vcxproj
@@ -93,6 +93,8 @@
       <AdditionalIncludeDirectories>D:\_need\vs_include;$(SolutionDir)\..\libksn\ksn\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ExceptionHandling>false</ExceptionHandling>
       <OmitFramePointers>false</OmitFramePointers>
+      <DisableSpecificWarnings>4530;4003</DisableSpecificWarnings>
+      <EnableEnhancedInstructionSet>AdvancedVectorExtensions</EnableEnhancedInstructionSet>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -115,6 +117,8 @@
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <OmitFramePointers>true</OmitFramePointers>
       <ExceptionHandling>false</ExceptionHandling>
+      <DisableSpecificWarnings>4530;4003</DisableSpecificWarnings>
+      <EnableEnhancedInstructionSet>AdvancedVectorExtensions</EnableEnhancedInstructionSet>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -135,6 +139,8 @@
       <AdditionalIncludeDirectories>D:\_need\vs_include;$(SolutionDir)\..\libksn\ksn\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ExceptionHandling>false</ExceptionHandling>
       <OmitFramePointers>false</OmitFramePointers>
+      <DisableSpecificWarnings>4530;4003</DisableSpecificWarnings>
+      <EnableEnhancedInstructionSet>AdvancedVectorExtensions</EnableEnhancedInstructionSet>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -157,6 +163,8 @@
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <OmitFramePointers>true</OmitFramePointers>
       <ExceptionHandling>false</ExceptionHandling>
+      <DisableSpecificWarnings>4530;4003</DisableSpecificWarnings>
+      <EnableEnhancedInstructionSet>AdvancedVectorExtensions</EnableEnhancedInstructionSet>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -175,6 +183,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="engine.hpp" />
     <ClInclude Include="errors.hpp" />
     <ClInclude Include="globals.hpp" />
     <ClInclude Include="logger.hpp" />
