--- a/digilogsim/digilogsim.vcxproj.filters
+++ b/digilogsim/digilogsim.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="globals.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="engine.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
